styles.css
/* ... */
.test-header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-bottom: 60px;
  margin-top: 60px;
}

.test-header h1 {
  font-family: Raleway, sans-serif;
  font-size: 34px;
  font-weight: 800;
  line-height: 100%;
  font-style: extrabold;
  color: #ffffff;
  padding-bottom: 10px;
}

.test-header p {
  font-family: "IBM Plex Mono", monospace;
  font-size: 14px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 1%;
  width: 570px;
  color: #9c9c9c;
}

.test-container {
  display: grid;
  gap: 50px;
  grid-template-columns: repeat(2, 1fr); /* 2 columns */
  grid-template-rows: repeat(2, auto); /* 2 rows */
  justify-items: center;
  align-items: stretch;
  margin-left: 5%;
  margin-right: 5%;
  height: 100%;
  width: 90%;
  margin-bottom: 30px;
}

.wrapper {
  background: linear-gradient(
    to right,
    rgba(255, 255, 255, 0.4) 0%,
    rgba(255, 255, 255, 0.05) 60%,
    rgba(255, 255, 255, 0) 75%
  );
  border-radius: 12px;
  padding: 1px;
  display: block;
  width: 100%;
  position: relative;
}

.testimonial {
  background-color: black;
  border-radius: 11px;
  width: 100%;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  height: 100%;
}

.testimonial p {
  font-family: "IBM Plex Mono", monospace;
  font-size: 14px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 1%;
  color: #9c9c9c;
  padding-bottom: 20px;
  margin-left: 30px;
  padding-top: 40px;
}

.testimonial::before {
  content: "\201C"; /* the " character */
  position: absolute;
  top: -21px; /* lifts it up to sit on the border */
  left: 5px;
  font-family: Raleway, sans-serif;
  font-size: 100px;
  font-weight: 400;
  line-height: 1;
  color: white;
  padding: 0 8px; /* a little breathing room so border doesn't touch the glyph */
}

.client {
  display: flex;
  align-items: center;
  gap: 20px;
  padding-bottom: 30px;
  margin-left: 30px;
  margin-top: auto;
}

.client img {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  object-fit: cover;
}

.client h3 {
  font-family: Raleway, sans-serif;
  font-size: 18px;
  font-weight: 700;
  line-height: 100%;
  font-style: bold;
  color: white;
}

/* Recent Work Page Styles */
.recent-work {
  background-color: white;
}

.recent-work-header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-bottom: 60px;
  margin-top: 60px;
}

.recent-work-header h1 {
  font-family: Raleway, sans-serif;
  font-size: 34px;
  font-weight: 800;
  line-height: 100%;
  font-style: extrabold;
  color: #080808;
  padding-bottom: 10px;
}

.recent-work-header p {
  font-family: "IBM Plex Mono", monospace;
  font-size: 14px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 1%;
  width: 570px;
  color: #9c9c9c;
}

.work-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 30px;
  margin-bottom: 60px;
  margin-left: 180px;
  margin-right: 180px;
  gap: 50px;
}

.work-container .work-item {
  display: flex;
  flex-direction: column;
}

.work-container .work-item img {
  width: 445px;
  height: 300px;
  border-radius: 8px;
  object-fit: cover;
  margin-bottom: 20px;
}

.work-container .work-item h3 {
  font-family: Raleway, sans-serif;
  font-size: 24px;
  font-weight: 800;
  line-height: 100%;
  font-style: extrabold;
  color: #080808;
  margin-bottom: 10px;
}

.work-container .work-item p {
  font-family: "IBM Plex Mono", monospace;
  font-size: 14px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 1%;
  color: #9c9c9c;
  margin-bottom: 20px;
}

.work-item .know-more {
  font-family: "IBM Plex Mono", monospace;
  font-size: 14px;
  font-weight: 700;
  color: white;
  background-color: #3f8e00;
  border: 1px solid #62ba1b;
  width: 35%;
  padding: 10px 24px;
  border-radius: 4px;
  box-shadow: 0 8px 30px 0 rgba(0, 0, 0, 0.1);
  margin-top: 20px;
}

.work-item .know-more a {
  color: white;
  text-decoration: none;
  cursor: pointer;
}

/* Contact Page Styles */
.contact {
  background-color: black;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.contact-header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-top: 80px;
}

.contact-header h1 {
  font-family: Raleway, sans-serif;
  font-size: 34px;
  font-weight: 800;
  line-height: 100%;
  font-style: extrabold;
  color: #ffffff;
  padding-bottom: 10px;
}

.contact-header p {
  font-family: "IBM Plex Mono", monospace;
  font-size: 14px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 1%;
  width: 570px;
  color: #9c9c9c;
}

.contact-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 20px;
  margin-left: 180px;
  margin-right: 180px;
  margin-bottom: 20px;
  flex: 1;
  margin-top: -40px;
}

.contact-form form {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.contact-form input,
.contact-form textarea {
  width: 100%;
  max-width: 400px;
  padding: 15px;
  border-radius: 4px;
  border: 1px solid #ccc;
  font-family: "IBM Plex Mono", monospace;
  font-size: 14px;
  font-weight: 400;
}

.contact-form label {
  width: 100%;
  max-width: 400px;
  color: white;
  font-family: "IBM Plex Mono", monospace;
  font-size: 14px;
  margin-bottom: 6px;
  margin-top: 20px;
}

.contact-form button {
  font-family: "IBM Plex Mono", monospace;
  font-size: 14px;
  font-weight: 700;
  color: white;
  background-color: #3f8e00;
  border: 1px solid #62ba1b;
  padding: 21px 64px;
  width: 100%;
  max-width: 400px;
  border-radius: 4px;
  box-shadow: 0 8px 30px 0 rgba(0, 0, 0, 0.1);
  margin-top: 20px;
}
/* ... */

